[package]
authors = ["Chris Osterwood <osterwood@gmail.com>"]
readme = "README.md"
name = "smartusb"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"

## Re-link to prevent stack overflows
# Right now can't use because `size` doesn't have a stack entry.  Unclear why.
# cortex-m-rt-ld = "0.1.1"

panic-halt = "0.2.0"
# panic-abort = "0.3.1"

## Real Time For the Masses (RTFM) framework
## for ARM Cortex-M microcontrollers
# cortex-m-rtfm = "0.3.4"
cortex-m-rtfm = { git = "https://github.com/ykomatsu/cortex-m-rtfm", branch = "update" }

stm32f042-hal = "0.6.2"

[dependencies.stm32f0]
version = "0.3.2"
features = ["stm32f0x2", "rt"]

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "smartusb"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
